[tool.poetry]
name = "cladecombiner"
version = "0.1.0"
description = "Lineage aggregation tool, e.g. to combine Pango lineages of SARS-CoV-2"
authors = ["Andy Magee <rzg0@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dendropy = "^5.0.1"
pytest = "^8.2.2"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.12.2"
mkdocstrings = "^0.27.0"
mkdocs-material = "^9.5.44"
mdx-truly-sane-lists = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
